# Basic-C-Programs

./: .gitignore  CMakeLists.txt  README.md  cfileoperation.txt  main.c
csamples/: c2darray.c  carrays.c  cconditional.c  cfileop.c  cfuncs.c  cloops.c  cpointers.c  cpractices.c  cstructure.c  cswitch.c  cunion.c  mngsystem.c  recover.c
datatsructures/: avl_tree.c  dijkstra-algo.c  infixtopostfix.c  insertion_sort.c  merge_sort.c  polynomial_addition.c  prims-algo.c  queuelinkedlist.c  selection_sort.c  singlylinkedlist.c  stackarrayimp.c
